--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:1.9.3"
     implementation "com.squareup.retrofit2:converter-moshi:1.9.3"
     implementation group: 'com.squareup.retrofit2', name: 'converter-moshi', version: '2.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
