--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:1.9.3"
     implementation group: 'com.squareup.retrofit2', name: 'converter-moshi', version: '2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "io.coil-kt:coil:1.1.1"
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
