added booking activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,20 @@
 
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Superapp">
+        android:theme="@style/Theme.Superapp"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ui.activity.booking.BookingActivity"/>
         <activity
-            android:name=".ui.webapp.WebAppActivity"
+            android:name=".ui.activity.WebAppActivity"
             android:exported="true" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
