--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation group: 'com.squareup.retrofit2', name: 'converter-moshi', version: '2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.google.androidbrowserhelper:androidbrowserhelper:2.2.0'
 
 
     testImplementation 'junit:junit:4.+'
