--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,18 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.google.androidbrowserhelper:androidbrowserhelper:2.2.0'
 
+    implementation 'com.google.mlkit:barcode-scanning:16.1.1'
+    implementation 'androidx.wear:wear:1.1.0'
+    def camerax_version = "1.0.0-beta10"
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-view:1.0.0-alpha10"
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha10"
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    compileOnly 'com.google.android.wearable:wearable:2.8.1'
 }
